--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                         <button class="win98-button" id="send-button" style="margin-left: 8px; padding: 5px 15px; font-size: 14px;">Send</button>
                     </div>
                     <div style="display: flex; margin-top: 8px; font-size: 12px; color: #404040;">
-                        <div>Powered by Anthropic Claude + Eleven Labs</div>
+                        <div>Powered by Axiom & Red Bulls</div>
                         <div style="margin-left: auto;">Speak with the VC genius behind $WEINER</div>
                     </div>
                     <div style="margin-top: 10px; text-align: center;">
