--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
     </div>
 
     <!-- Updated Roadmap Window -->
-<div class="window" id="roadmap">
+<div class="window" id="roadmap" style="width: 1050px; height: 1080px; left: 50px; top: 20px;">
     <div class="window-header">
         <div>Weiner Perkins Roadmap</div>
         <div class="window-buttons">
@@ -758,9 +758,9 @@
             <div class="window-button close">X</div>
         </div>
     </div>
-    <div class="window-content roadmap-content" style="text-align: center; padding: 0;">
+    <div class="window-content roadmap-content" style="text-align: center; padding: 10px; height: calc(100% - 25px); overflow: auto;">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682668d92b43c6d7c4a93df8_ChatGPT%20Image%20May%2015%2C%202025%2C%2011_21_08%20PM.png" 
-             style="width: 100%; height: auto; max-width: 800px;" alt="Weiner Perkins Roadmap">
+             style="width: 1024px; height: 1024px; max-width: 100%;" alt="Weiner Perkins Roadmap">
     </div>
 </div>
 
