--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
     </div>
 </div>
 
-    <div class="window" id="token">
-    <div class="window-header" style="width: 100%;">
+    <div class="window" id="token" style="overflow: hidden;">
+    <div class="window-header" style="width: 100%; box-sizing: border-box; display: flex; justify-content: space-between;">
         <div>$WEINER Token Info</div>
         <div class="window-buttons">
             <div class="window-button minimize">_</div>
@@ -750,9 +750,8 @@
         </div>
     </div>
 
-    <!-- Updated Roadmap Window -->
 <!-- Updated Roadmap Window with non-stretched image -->
-<div class="window" id="roadmap" style="width: 1060px; height: 1080px;">
+<div class="window" id="roadmap" style="width: 1060px; height: 600px;">
     <div class="window-header" style="width: 100%;">
         <div>Weiner Perkins Roadmap</div>
         <div class="window-buttons">
@@ -761,9 +760,9 @@
             <div class="window-button close">X</div>
         </div>
     </div>
-    <div class="window-content roadmap-content" style="text-align: center; padding: 10px; height: calc(100% - 25px); overflow: auto;">
+    <div class="window-content roadmap-content" style="text-align: center; padding: 0; height: calc(100% - 21px); overflow: auto;">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682668d92b43c6d7c4a93df8_ChatGPT%20Image%20May%2015%2C%202025%2C%2011_21_08%20PM.png" 
-             style="width: 1024px; height: 1024px; object-fit: contain; max-width: 100%;" alt="Weiner Perkins Roadmap">
+             style="max-width: 100%; width: auto; height: auto;" alt="Weiner Perkins Roadmap">
     </div>
 </div>
 
