--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
             
             <h4 style="color: #000080; font-size: 14px; margin-top: 20px; margin-bottom: 10px;">Key Features:</h4>
             <ul style="margin-left: 20px; margin-bottom: 0; line-height: 1.5;">
-                <li>Serves as a conversation starter at awkward crypto meetups</li>
+                <li>Serves as a conversation starter for those virgins at TOKEN2049</li>
                 <li>Provides holders with a sense of community built around a shared joke</li>
                 <li>Allows you to tell people you "invest in blockchain" without any technical knowledge</li>
                 <li>Potential to be mentioned in a future academic paper about market irrationality</li>
@@ -865,7 +865,7 @@
     <!-- Taskbar -->
     <div class="taskbar">
         <div class="start-button" id="start-button">
-            <img src="/api/placeholder/16/16" alt="Start">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" alt="Start">
             Start
         </div>
         <div class="taskbar-time" id="taskbar-time">4:20 PM</div>
@@ -876,31 +876,31 @@
         <div class="start-menu-header">Weiner Perkins</div>
         <div class="start-menu-items">
             <div class="start-menu-item" data-window="ai-assistant">
-                <img src="/api/placeholder/24/24" alt="Jack Weinerstein">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682670b32b43c6d7c4ae25d5_88bc4c5b952b67465907199d44619b8e-removebg-preview%20(1).png" alt="Jack Weinerstein">
                 Jack Weinerstein
             </div>
             <div class="start-menu-item" data-window="my-computer">
-                <img src="/api/placeholder/24/24" alt="My Computer">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fabcf9d4fdb4b6cea04_ChatGPT_Image_May_15__2025__11_42_21_PM-removebg-preview.png" alt="My Computer">
                 My Computer
             </div>
             <div class="start-menu-item" data-window="about">
-                <img src="/api/placeholder/24/24" alt="About">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266facccd15b0632f43346_ChatGPT_Image_May_15__2025__11_43_14_PM-removebg-preview.png" alt="About">
                 About WP
             </div>
             <div class="start-menu-item" data-window="token">
-                <img src="/api/placeholder/24/24" alt="Token Info">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab8aebd96fcd8bd7b9_ChatGPT_Image_May_15__2025__11_43_54_PM-removebg-preview.png" alt="Token Info">
                 $WEINER Token
             </div>
             <div class="start-menu-item" data-window="team">
-                <img src="/api/placeholder/24/24" alt="Team">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab05a08f242904e254_ChatGPT_Image_May_15__2025__11_44_52_PM-removebg-preview.png" alt="Team">
                 Our Team
             </div>
             <div class="start-menu-item" data-window="roadmap">
-                <img src="/api/placeholder/24/24" alt="Roadmap">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fabcdc82f6b5d1e4bda_ChatGPT_Image_May_15__2025__11_45_48_PM-removebg-preview.png" alt="Roadmap">
                 Roadmap
             </div>
             <div class="start-menu-item" data-window="contact">
-                <img src="/api/placeholder/24/24" alt="Contact">
+                <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab6f8a2bb00bfc5ced_ChatGPT_Image_May_15__2025__11_47_53_PM-removebg-preview.png" alt="Contact">
                 Contact
             </div>
         </div>
