--- a/index.html
+++ b/index.html
@@ -357,31 +357,31 @@
     <div class="desktop" id="desktop">
         <!-- Desktop Icons -->
         <div class="icon" data-window="my-computer">
-            <img src="/api/placeholder/32/32" alt="My Computer">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fabcf9d4fdb4b6cea04_ChatGPT_Image_May_15__2025__11_42_21_PM-removebg-preview.png" alt="My Computer">
             <div class="icon-text">My Computer</div>
         </div>
         <div class="icon" data-window="ai-assistant">
-            <img src="/api/placeholder/32/32" alt="Jack Weinerstein">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682670b32b43c6d7c4ae25d5_88bc4c5b952b67465907199d44619b8e-removebg-preview%20(1).png" alt="Jack Weinerstein">
             <div class="icon-text">Jack Weinerstein</div>
         </div>
         <div class="icon" data-window="about">
-            <img src="/api/placeholder/32/32" alt="About">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266facccd15b0632f43346_ChatGPT_Image_May_15__2025__11_43_14_PM-removebg-preview.png" alt="About">
             <div class="icon-text">About WP</div>
         </div>
         <div class="icon" data-window="token">
-            <img src="/api/placeholder/32/32" alt="Token Info">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab8aebd96fcd8bd7b9_ChatGPT_Image_May_15__2025__11_43_54_PM-removebg-preview.png" alt="Token Info">
             <div class="icon-text">$WEINER Token</div>
         </div>
         <div class="icon" data-window="team">
-            <img src="/api/placeholder/32/32" alt="Team">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab05a08f242904e254_ChatGPT_Image_May_15__2025__11_44_52_PM-removebg-preview.png" alt="Team">
             <div class="icon-text">Our Team</div>
         </div>
         <div class="icon" data-window="roadmap">
-            <img src="/api/placeholder/32/32" alt="Roadmap">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fabcdc82f6b5d1e4bda_ChatGPT_Image_May_15__2025__11_45_48_PM-removebg-preview.png" alt="Roadmap">
             <div class="icon-text">Roadmap</div>
         </div>
         <div class="icon" data-window="contact">
-            <img src="/api/placeholder/32/32" alt="Contact">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266fab6f8a2bb00bfc5ced_ChatGPT_Image_May_15__2025__11_47_53_PM-removebg-preview.png" alt="Contact">
             <div class="icon-text">Contact</div>
         </div>
     </div>
