--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div class="window-content" style="padding: 0; height: 680px;">
         <!-- Top banner image -->
         <div style="width: 100%; height: 180px; background-color: #000080; position: relative; overflow: hidden;">
-            <img src="/api/placeholder/800/180" alt="Weiner Perkins Banner" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68267a747cbe4cd7c4e7b7f8_New%20Project%20-%202025-05-16T003353.892.png" alt="Weiner Perkins Banner" style="width: 100%; height: 100%; object-fit: cover;">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.6));">
                 <div style="padding: 30px 20px; color: white; display: flex; align-items: center;">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266158c9ce5166b2944a73_weiner.png" 
