--- a/index.html
+++ b/index.html
@@ -762,10 +762,8 @@
             <!-- Jack Weinerstein -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Jack's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Jack -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6826702e372e54f38de6c6be_88bc4c5b952b67465907199d44619b8e-removebg-preview.png" alt="Jack Weinerstein" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Jack Weinerstein</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">Founder & Chief Meme Officer (CMO)</div>
@@ -780,10 +778,8 @@
             <!-- Satoshi Nakasausage -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Satoshi's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Satoshi -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68268261a2ecca6a06408030_nsDr2-Pm_400x400.jpg" alt="Satoshi Nakasausage" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Satoshi Nakasausage</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">Anonymous Co-founder & CTO</div>
@@ -798,10 +794,8 @@
             <!-- Vitalik Butwiener -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Vitalik's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Vitalik -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6826869dd41bb7ba946c05c7_108a7485647f2b8476afe54eae39e5c2.avif" alt="Vitalik Butwiener" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Vitalik Butwiener</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">Smart Contract Developer</div>
@@ -816,10 +810,8 @@
             <!-- Jen from Accounting -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Jen's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Jen -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682682614d9ac186a5c8dc7c_1662156302363.jpeg" alt="Jen from Accounting" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Jen from Accounting</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">CFO (Chief Fudging Officer)</div>
@@ -834,10 +826,8 @@
             <!-- Hotdog Capital -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Hotdog's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Hotdog -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68268261f6276f76670380e6_The_Brat_29_-_Outfit_-_Fortnite.webp" alt="Hotdog Capital" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Hotdog Capital</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">AI Investment Algorithm</div>
@@ -852,10 +842,8 @@
             <!-- Barry Silberdog -->
             <div style="background-color: white; border: 1px solid #d0d0d0; padding: 15px; display: flex; flex-direction: column;">
                 <div style="background-color: #f5f5f5; padding: 5px; text-align: center; margin-bottom: 10px; height: 120px; display: flex; align-items: center; justify-content: center;">
-                    <!-- Placeholder for Barry's image -->
-                    <div style="width: 100px; height: 100px; background-color: #e0e0e0; display: flex; align-items: center; justify-content: center; border: 1px solid #c0c0c0;">
-                        [PHOTO]
-                    </div>
+                    <!-- Image for Barry -->
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6826888273a1956568e63a71_workthere-dog.png" alt="Barry Silberdog" style="width: 100px; height: 100px; object-fit: cover; border: 1px solid #c0c0c0;">
                 </div>
                 <div style="font-weight: bold; color: #000080; font-size: 16px;">Barry Silberdog</div>
                 <div style="color: #800000; font-style: italic; margin-bottom: 10px;">Chief Short Seller</div>
