--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weiner Perkins - Innovative Memecoin Ventures</title>
+    <title>Weiner Perkins - Capital Fund</title>
     <link rel="icon" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" type="image/x-icon">
     <style>
         /* Reset and Base Styles */
