--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weiner Perkins - Capital Fund</title>
+    <title>Weiner Perkins - Innovative Memecoin Ventures</title>
     <link rel="icon" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" type="image/x-icon">
     <style>
         /* Reset and Base Styles */
@@ -443,7 +443,9 @@
                          style="width: 80px; margin-bottom: 15px;">
                     <div style="font-weight: bold; margin-bottom: 10px; color: #000080; font-size: 16px; text-align: center;">Become a Weiner Perkins Investor</div>
                     <div style="margin-bottom: 15px; text-align: center; font-size: 13px;">Fill out our application to join our exclusive network of investors.</div>
-                    <button class="win98-button" style="padding: 8px 20px; font-size: 14px; width: 120px;">Apply Now</button>
+                    <a href="https://twitter.com/WeinerPerkins/status/1923163607514202337" target="_blank" style="text-decoration: none;">
+    <button class="win98-button" style="padding: 8px 20px; font-size: 14px; width: 120px; cursor: pointer;">Apply Now</button>
+</a>
                     <div style="margin-top: 10px; font-size: 11px; color: #666; text-align: center;">Limited spots available*</div>
                     <div style="margin-top: 5px; font-size: 9px; color: #999; text-align: center;">*Not actually limited in any way</div>
                 </div>
