--- a/index.html
+++ b/index.html
@@ -455,8 +455,10 @@
                 <div style="font-weight: bold; margin-bottom: 5px; color: #806000;">🚀 $WEINER Token Launch Coming Soon!</div>
                 <div style="font-size: 13px; line-height: 1.4;">Join our community to get early access to the revolutionary $WEINER token. The presale closes soon, so act fast to secure your position in the future of finance!</div>
                 <div style="display: flex; justify-content: flex-end; margin-top: 10px;">
-                    <button class="win98-button" style="font-size: 13px;">Join Community</button>
-                </div>
+    <a href="https://twitter.com/WeinerPerkins/status/1923163607514202337" target="_blank" style="text-decoration: none;">
+        <button class="win98-button" style="font-size: 13px; cursor: pointer;">Join Community</button>
+    </a>
+</div>
             </div>
             
             <div style="margin-top: 25px; padding: 15px; background-color: #f0f0f8; border: 1px solid #d0d0e0; border-radius: 3px;">
