--- a/index.html
+++ b/index.html
@@ -1034,12 +1034,15 @@
     </div>
     <!-- Taskbar -->
     <div class="taskbar">
-        <div class="start-button" id="start-button">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" alt="Start">
-            Start
-        </div>
-        <div class="taskbar-time" id="taskbar-time">4:20 PM</div>
+    <div class="start-button" id="start-button">
+        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" alt="Start">
+        Start
     </div>
+    <div style="display: flex; align-items: center; margin-left: 10px; padding: 2px 8px; background-color: #c0c0c0; border-top: 1px solid #ffffff; border-left: 1px solid #ffffff; border-right: 1px solid #808080; border-bottom: 1px solid #808080; font-size: 11px;">
+        <span style="color: #000080; font-weight: bold;">CA: SOON</span>
+    </div>
+    <div class="taskbar-time" id="taskbar-time">4:20 PM</div>
+</div>
 
     <!-- Start Menu -->
     <div class="start-menu" id="start-menu">
