--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             <div id="video-placeholder" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
                 <div style="color: #c0c0c0; text-align: center;">
                     <div style="margin-bottom: 15px;">Video Player Ready</div>
-                    <div style="font-size: 12px;">Your Cloudinary video will appear here</div>
+                    <div style="font-size: 12px;">Jen did you turn this thing on...</div>
                 </div>
             </div>
             
