--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morgan Stonkley - Innovative Memecoin Ventures</title>
+    <title>Morgan Stonkley - Make Money like the 1%</title>
     <link rel="icon" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba4e5d056a8fee017bc45_raw.png" type="image/x-icon">
     <style>
         /* Reset and Base Styles */
@@ -880,12 +880,12 @@
         </div>
     </div>
     <div class="window-content roadmap-content" style="text-align: center; padding: 0; height: calc(100% - 21px); overflow: auto;">
-        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682668d92b43c6d7c4a93df8_ChatGPT%20Image%20May%2015%2C%202025%2C%2011_21_08%20PM.png" 
+        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba7fecf7aa2b90bdbafb4_360_F_705855757_ZWHCG5EDBgTP01VAxDUfpspMu9o3RDJn.jpg" 
              style="max-width: 100%; width: auto; height: auto;" alt="Morgan Stonkley Roadmap">
     </div>
 </div>
     <div class="window-content roadmap-content" style="text-align: center; padding: 0; height: calc(100% - 21px); overflow: auto;">
-        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682668d92b43c6d7c4a93df8_ChatGPT%20Image%20May%2015%2C%202025%2C%2011_21_08%20PM.png" 
+        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba7fecf7aa2b90bdbafb4_360_F_705855757_ZWHCG5EDBgTP01VAxDUfpspMu9o3RDJn.jpg" 
              style="max-width: 100%; width: auto; height: auto;" alt="Morgan Stonkley Roadmap">
     </div>
 </div>
