--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                          style="width: 80px; margin-bottom: 15px;">
                     <div style="font-weight: bold; margin-bottom: 10px; color: #000080; font-size: 16px; text-align: center;">Become a Morgan Stonkley Investor</div>
                     <div style="margin-bottom: 15px; text-align: center; font-size: 13px;">Fill out our application to join our exclusive network of investors.</div>
-                    <a href="https://twitter.com/morganstonkley" target="_blank" style="text-decoration: none;">
+                    <a href="https://x.com/i/communities/1924589804911792146" target="_blank" style="text-decoration: none;">
     <button class="win98-button" style="padding: 8px 20px; font-size: 14px; width: 120px; cursor: pointer;">Apply Now</button>
 </a>
                     <div style="margin-top: 10px; font-size: 11px; color: #666; text-align: center;">Limited spots available*</div>
@@ -455,7 +455,7 @@
                 <div style="font-weight: bold; margin-bottom: 5px; color: #806000;">🚀 $STONKLEY Token Launch Coming Soon!</div>
                 <div style="font-size: 13px; line-height: 1.4;">Join our community to get early access to the revolutionary $STONKLEY token. The presale closes soon, so act fast to secure your position in the future of finance!</div>
                 <div style="display: flex; justify-content: flex-end; margin-top: 10px;">
-    <a href="https://twitter.com/morganstonkley" target="_blank" style="text-decoration: none;">
+    <a href="https://x.com/i/communities/1924589804911792146" target="_blank" style="text-decoration: none;">
         <button class="win98-button" style="font-size: 13px; cursor: pointer;">Join Community</button>
     </a>
 </div>
@@ -948,7 +948,7 @@
             <!-- Twitter connect -->
             <div style="background-color: #e8f4f8; border: 1px solid #a0c0d0; padding: 15px; text-align: center;">
                 <div style="font-weight: bold; margin-bottom: 10px;">The fastest way to reach us:</div>
-                <a href="https://twitter.com/weinerperkins" target="_blank" style="text-decoration: none;">
+                <a href="https://x.com/i/communities/1924589804911792146" target="_blank" style="text-decoration: none;">
                     <button class="win98-button" style="padding: 8px 15px; display: flex; align-items: center; margin: 0 auto;">
                         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba4e5d056a8fee017bc45_raw.png" 
                              alt="Twitter" style="margin-right: 8px; width: 16px; height: 16px;"> 
