--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         body {
-    background-image: url('https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68266158f0f51afe19ee33de_background.png');
+    background-image: url('https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba4e5ed363fb2fff08270_windows-98-yaa4sbkls0sleaqm%20(1)%20(1).png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -350,6 +350,12 @@
             border-right: 2px solid #ffffff;
             border-bottom: 2px solid #ffffff;
         }
+
+        @keyframes blink {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    100% { opacity: 0; }
+}
     </style>
 </head>
 <body>
@@ -864,12 +870,15 @@
     </div>
     <!-- Taskbar -->
     <div class="taskbar">
-        <div class="start-button" id="start-button">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682661a7e0be9e75079471f8_52345234321432.png" alt="Start">
-            Start
-        </div>
-        <div class="taskbar-time" id="taskbar-time">4:20 PM</div>
+    <div class="start-button" id="start-button">
+        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682ba4e5d056a8fee017bc45_raw.png" alt="Start">
+        Start
     </div>
+    <div style="display: flex; align-items: center; margin-left: 10px; padding: 2px 8px; background-color: #c0c0c0; border-top: 1px solid #ffffff; border-left: 1px solid #ffffff; border-right: 1px solid #808080; border-bottom: 1px solid #808080; font-size: 11px;">
+        <span style="color: #000080; font-weight: bold;">CA:</span>
+    </div>
+    <div class="taskbar-time" id="taskbar-time">4:20 PM</div>
+</div>
 
     <!-- Start Menu -->
     <div class="start-menu" id="start-menu">
