--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                          style="width: 80px; margin-bottom: 15px;">
                     <div style="font-weight: bold; margin-bottom: 10px; color: #000080; font-size: 16px; text-align: center;">Become a Sackquoya Capital Investor</div>
                     <div style="margin-bottom: 15px; text-align: center; font-size: 13px;">Fill out our application to join our exclusive network of investors.</div>
-                    <a href="https://x.com/i/communities/1924589804911792146" target="_blank" style="text-decoration: none;">
+                    <a href="https://x.com/i/communities/1925658600224989196" target="_blank" style="text-decoration: none;">
     <button class="win98-button" style="padding: 8px 20px; font-size: 14px; width: 120px; cursor: pointer;">Apply Now</button>
 </a>
                     <div style="margin-top: 10px; font-size: 11px; color: #666; text-align: center;">Limited spots available*</div>
@@ -952,7 +952,7 @@
                     <button class="win98-button" style="padding: 8px 15px; display: flex; align-items: center; margin: 0 auto;">
                         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/682f8f77b1da2dda307aba59_ChatGPT%20Image%20May%2022%2C%202025%2C%2009_53_21%20PM.png" 
                              alt="Twitter" style="margin-right: 8px; width: 16px; height: 16px;"> 
-                        <span style="font-weight: bold; color: #000080;">Follow @morganstonkley on Twitter</span>
+                        <span style="font-weight: bold; color: #000080;">Follow @sackquoyaVC on Twitter</span>
                     </button>
                 </a>
                 <div style="margin-top: 10px; font-size: 11px; color: #808080;">
